<resources>
    <string name="app_name">AnyPay ReceiptNotice</string>
    <string name="text_setting">Setting</string>
    <string name="text_clearlog">Clear Log</string>
    <string name="text_reverseshow">Reverse Display</string>
    <string name="text_home_fragment_tip">Earn Tip</string>
    <string name="text_home_fragment_nexttip">Swip left to receipt record</string>
    <string name="filelog_title">Post Record</string>
    <string name="illustratedecrypt_title">Illustrate Decrypt</string>
    <string name="buttontext_setposturl">set the post url</string>
    <string name="text_language">language</string>
    <string name="text_language_en">English</string>
    <string name="text_language_cn">Simplified_Chinese</string>
    <string name="text_language_hk">Traditional_Chinese</string>
    <string name="text_NSOK">Notification bar listening service is on!</string>
    <string name="text_SETURL">Set POST URL：</string>
    <string name="text_NSSQTS_1">Warm prompt</string>
    <string name="text_NSSQTS_2">Currently, you are not authorized to read the notice bar of this system. Please go to authorization before continuing!</string>
    <string name="text_NSSQTS_3">To empower</string>

    <string-array name="pref_entries_encryptmethod">
        <item>des</item>
        <item>md5</item>
    </string-array>

    <string-array name="pref_entryvalues_encryptmethod">
        <item>des</item>
        <item>md5</item>
    </string-array>

</resources>